src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

#selected {
  opacity: 0.6;
}

#notSelected:hover {
  background-color: darkcyan;
}

.lineOne {
  transform: rotate(45deg);
}
.lineTwo {
  opacity: 0;
}
.lineThree {
  transform: rotate(-45deg);
}

#closed {
  transform: translateY(-100%);
}

#open {
  transform: translateY(0);
}

